# eagar-tsai

./: .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  README.md  build_windows_dll.bat  build_windows_dll.ps1  eagar_tsai_integrand.c  et_input_data_example.xlsx  et_melt_pool_script.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  runPack_Comp.sh  setup.py  slurm_et_job.sh
.github/: dependabot.yml
.github/workflows/: gh-pages.yml  lint.yml  release.yml  test.yml
api/reference/: index.html
docs/: getting-started.md  index.md  installation.md  methodology.md  usage.md
docs/api/: reference.md
fig24_extract/: fig24_extracted_points.csv
getting-started/: index.html
installation/: index.html
methodology/: index.html
search/: search_index.json
src/eagar_tsai/: __init__.py  _api.py  _core.py  _integrand_ext.c  _integrand_ext.pyi  _types.py  plot.py
stylesheets/: extra.css
tests/: conftest.py  test_api.py  test_core.py  test_plot.py  test_types.py
usage/: index.html
