[project]
name = "eagar-tsai"
version = "0.1.0"
description = "Eagar–Tsai moving heat source model for melt pool dimension estimation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Brent Vela", email = "brentvela@tamu.edu"},
    { name = "Doguhan Sariturk", email = "dogu.sariturk@gmail.com" }
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15",
    "ty>=0.0.1a6",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=4.0",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

[build-system]
requires = ["setuptools>=74", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eagar_tsai = ["py.typed", "*.pyi"]

[tool.ruff]
src = ["src", "tests"]
line-length = 130
target-version = "py311"

[tool.ruff.lint]
select = [
    "ERA", # Eradicate
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "FA",  # flake8-future-annotations
    "ICN", # flake8-import-conventions
    "Q",   # flake8-quotes
    "SIM", # flake8-simplify
    "TC",  # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "I",   # isort
    "N",   # pep8-naming
    "E",   # pycodestyle Errors
    "W",   # pycodestyle Warnings
    "D",   # pydocstyle
    "F",   # Pyflakes
    "PL",  # Pylint
    "UP",  # pyupgrade
]
ignore = [
    "PLC0415", # Import outside top level
    "PLR2004", # magic value assigned to variable in function
    "N806", # variable in function should be lowercase
]
pydocstyle.convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks slow tests (deselect with '-m \"not slow\"')",
    "integration: requires compiled C extension",
]

[tool.ty.environment]
python-version = "3.11"

[tool.cibuildwheel]
build = "cp311-* cp312-* cp313-*"

[tool.cibuildwheel.macos]
archs = "x86_64 arm64"
